<resources>
    <string name="app_name">Gym Club</string>

    <string name="title_home">运动</string>
    <string name="title_discovery">发现</string>
    <string name="title_me">我</string>

    <string name="hint_username">请输入用户名</string>
    <string name="hint_nickname">请输入昵称</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_repeat_password">请再次输入密码</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>


    <string name="total_runtime_slogan">在 GymClub已累计运动   ></string>
    <string name="total_runtime">分钟</string>
    <string name="today_runtime">今日运动-分钟</string>
    <string name="no_more_information">-没有更多内容-</string>
    <string name="key_return"><![CDATA[< 返回]]></string>
    <string name="title_activity_course">CourseActivity</string>

</resources>
