<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_discovery"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="1dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_runtime_slogan"
                android:background="#eee"
                android:padding="5dp"
                android:layout_marginTop="0dp"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eee">

                <TextView
                    android:id="@+id/total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/total_runtime"
                    app:layout_constraintLeft_toRightOf="@id/total_time"
                    app:layout_constraintBottom_toBottomOf="@id/total_time"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/today_runtime"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/total_time"/>

            </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc"/>



        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_joined_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="已参加的课程"
            app:layout_constraintBaseline_toBaselineOf="@id/btn_add_course"/>

        <Button
            android:id="@+id/btn_add_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+添加"
            android:textColor="#fff"
            android:background="@drawable/button_shape"
            app:layout_constraintRight_toRightOf="parent"
            android:minHeight="0dp"/>

    </android.support.constraint.ConstraintLayout>


</LinearLayout>